[package]
name = "markdown_uidl"
version = "0.1.0"
authors = ["Jaya Krishna Namburu <namburu1995@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pulldown-cmark = { version = "0.8", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"

